test/functions/ferguson/set-const-ref-this.good
set-const-ref-this.chpl:4: In function 'f':
set-const-ref-this.chpl:6: error: cannot assign to const variable
set-const-ref-this.chpl:13: Function 'f' instantiated as: f(this: R(int(64)))
